<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pokedex</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">name</string>
    <string name="type">type</string>
    <string name="ability1">Ability1</string>
    <string name="ability2">ability2</string>
    <string name="todo">TODO</string>
    <string name="type2">type2</string>
    <string name="index">index</string>
    <string name="weigth">weigth</string>
    <string name="hp">hp</string>
    <string name="atck">atck</string>
    <string name="def">def</string>
    <string name="spatk">spatk</string>
    <string name="spdef">spdef</string>
    <string name="speed">speed</string>
    <string name="heigth">heigth</string>
    <string name="todo2" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="abilities">ABILITIES</string>
</resources>